--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -23,6 +23,7 @@
 		<PackageVersion Include="Microsoft.Extensions.Http" Version="7.0.0" />
 		<PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
 		<PackageVersion Include="Microsoft.Extensions.Options" Version="7.0.1" />
+		<PackageVersion Include="Microsoft.NET.Build.Containers" Version="0.4.0" />
 		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
 		<PackageVersion Include="Sentry.Extensions.Logging" Version="3.31.0" />
 		<PackageVersion Include="Serilog.Enrichers.Environment" Version="2.2.0" />
