--- a/src/EidolonicBot/EidolonicBot.csproj
+++ b/src/EidolonicBot/EidolonicBot.csproj
@@ -4,9 +4,19 @@
 		<UserSecretsId>a2361216-afa4-40b4-b4ed-d501a64a040b</UserSecretsId>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<ContainerImageName>everscale-actions/eidolonic-bot</ContainerImageName>
+		<ContainerImageTags Condition="$(ContainerImageTags) == ''">latest</ContainerImageTags>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<ContainerLabel Include="org.opencontainers.image.source" Value="https://github.com/$(ContainerImageName)" />
+	</ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" />
+		<PackageReference Include="Microsoft.NET.Build.Containers" />
 		<PackageReference Include="Sentry.Extensions.Logging" />
 		<PackageReference Include="Serilog.Enrichers.Environment" />
 		<PackageReference Include="Serilog.Extensions.Hosting" />
