implement subscriptions add database

--- a/src/EidolonicBot/appsettings.Development.json
+++ b/src/EidolonicBot/appsettings.Development.json
@@ -12,5 +12,9 @@
         "EverscaleNet": "Verbose"
       }
     }
+  },
+  "Provider": "Sqlite",
+  "ConnectionStrings": {
+    "Sqlite": "Data Source=App_Data/eidolonic.db"
   }
 }
