--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -14,17 +14,20 @@
 		<PackageVersion Include="MassTransit" Version="8.0.15" />
 		<PackageVersion Include="MassTransit.Abstractions" Version="8.0.15" />
 		<PackageVersion Include="MassTransit.Analyzers" Version="8.0.15" />
+		<PackageVersion Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+		<PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5" />
+		<PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.5" />
 		<PackageVersion Include="Microsoft.Extensions.Caching.Abstractions" Version="7.0.0" />
 		<PackageVersion Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
 		<PackageVersion Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
 		<PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
 		<PackageVersion Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
-		<PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
 		<PackageVersion Include="Microsoft.Extensions.Http" Version="7.0.0" />
 		<PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
 		<PackageVersion Include="Microsoft.Extensions.Options" Version="7.0.1" />
 		<PackageVersion Include="Microsoft.NET.Build.Containers" Version="0.4.0" />
 		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+		<PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
 		<PackageVersion Include="Sentry.Extensions.Logging" Version="3.31.0" />
 		<PackageVersion Include="Serilog.Enrichers.Environment" Version="2.2.0" />
 		<PackageVersion Include="Serilog.Extensions.Hosting" Version="5.0.1" />
