--- a/src/EidolonicBot.Business/EidolonicBot.Business.csproj
+++ b/src/EidolonicBot.Business/EidolonicBot.Business.csproj
@@ -11,7 +11,6 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.Hosting" />
-		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
 		<PackageReference Include="Microsoft.Extensions.Options" />
 		<PackageReference Include="Telegram.Bot" />
@@ -19,6 +18,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\EidolonicBot.Constants\EidolonicBot.Constants.csproj" />
+		<ProjectReference Include="..\EidolonicBot.Database.Models\EidolonicBot.Database.Models.csproj" />
 		<ProjectReference Include="..\EidolonicBot.TelegramBot\EidolonicBot.TelegramBot.csproj" />
 		<ProjectReference Include="..\EidolonicBot.Utils\EidolonicBot.Utils.csproj" />
 		<ProjectReference Include="..\EidolonicBot.Wallet\EidolonicBot.Wallet.csproj" />
