--- a/src/EidolonicBot/EidolonicBot.csproj
+++ b/src/EidolonicBot/EidolonicBot.csproj
@@ -14,6 +14,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" />
 		<PackageReference Include="Microsoft.NET.Build.Containers" />
@@ -35,6 +39,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\EidolonicBot.Business\EidolonicBot.Business.csproj" />
+		<ProjectReference Include="..\EidolonicBot.Database\EidolonicBot.Database.csproj" />
 		<ProjectReference Include="..\EidolonicBot.TelegramBot\EidolonicBot.TelegramBot.csproj" />
 	</ItemGroup>
 </Project>
