--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,6 +27,13 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-dotnet@v3
 
+      - uses: actions/cache@v3
+        with:
+          path: ~/.nuget/packages
+          key: nuget-${{ hashFiles('Directory.Packages.props') }}
+          restore-keys: |
+            nuget-
+
       - name: Build image
         working-directory: src
         env:
