--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -4,11 +4,10 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageVersion Include="coverlet.collector" Version="3.2.0" />
-		<PackageVersion Include="EverscaleNet" Version="1.42.2-alfa" />
-		<PackageVersion Include="EverscaleNet.AppKit" Version="1.42.2-alfa" />
-		<PackageVersion Include="EverscaleNet.Client" Version="1.42.2-alfa" />
-		<PackageVersion Include="EverscaleNet.Utils" Version="1.42.2-alfa" />
-		<PackageVersion Include="EverscaleNet.WebClient" Version="1.42.1" />
+		<PackageVersion Include="EverscaleNet" Version="1.42.2-alfa2" />
+		<PackageVersion Include="EverscaleNet.AppKit" Version="1.42.2-alfa2" />
+		<PackageVersion Include="EverscaleNet.Client" Version="1.42.2-alfa2" />
+		<PackageVersion Include="EverscaleNet.Utils" Version="1.42.2-alfa2" />
 		<PackageVersion Include="FluentAssertions" Version="6.11.0" />
 		<PackageVersion Include="MassTransit" Version="8.0.15" />
 		<PackageVersion Include="MassTransit.Abstractions" Version="8.0.15" />
