--- a/src/EidolonicBot.Bot/EidolonicBot.Bot.csproj
+++ b/src/EidolonicBot.Bot/EidolonicBot.Bot.csproj
@@ -1,24 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <PackageReference Include="EverscaleNet" />
-    <PackageReference Include="EverscaleNet.Utils" />
-    <PackageReference Include="MassTransit" />
-    <PackageReference Include="MassTransit.Analyzers">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="MassTransit.Abstractions" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" />
     <PackageReference Include="Microsoft.Extensions.Hosting" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
-    <PackageReference Include="Microsoft.Extensions.Options" />
+    <PackageReference Include="Microsoft.Extensions.Http" />
     <PackageReference Include="Telegram.Bot" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EidolonicBot.Abstract\EidolonicBot.Abstract.csproj" />
     <ProjectReference Include="..\EidolonicBot.Constants\EidolonicBot.Constants.csproj" />
     <ProjectReference Include="..\EidolonicBot.Database.Models\EidolonicBot.Database.Models.csproj" />
     <ProjectReference Include="..\EidolonicBot.Subscriptions\EidolonicBot.Subscriptions.csproj" />
-    <ProjectReference Include="..\EidolonicBot.TelegramBot\EidolonicBot.TelegramBot.csproj" />
     <ProjectReference Include="..\EidolonicBot.Utils\EidolonicBot.Utils.csproj" />
     <ProjectReference Include="..\EidolonicBot.Wallet\EidolonicBot.Wallet.csproj" />
   </ItemGroup>
