--- a/src/EidolonicBot.Subscriptions/EidolonicBot.Subscriptions.csproj
+++ b/src/EidolonicBot.Subscriptions/EidolonicBot.Subscriptions.csproj
@@ -10,9 +10,11 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+    <PackageReference Include="Telegram.Bot" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EidolonicBot.Abstract\EidolonicBot.Abstract.csproj" />
     <ProjectReference Include="..\EidolonicBot.Database.Models\EidolonicBot.Database.Models.csproj" />
   </ItemGroup>
 
