format subscription message

--- a/src/EidolonicBot/appsettings.json
+++ b/src/EidolonicBot/appsettings.json
@@ -42,5 +42,15 @@
   },
   "MemoryCache": {
     "SizeLimit": 10000
+  },
+  "Blockchain": {
+    "Explorers:Everscan": {
+      "Name": "everscan.io",
+      "TransactionLinkTemplate": "https://everscan.io/transactions/{0}"
+    },
+    "Explorers:Everlive": {
+      "Name": "ever.live",
+      "TransactionLinkTemplate": "https://ever.live/transactions/transactionDetails?id={0}"
+    }
   }
 }
