--- a/src/EidolonicBot.Subscriptions/EidolonicBot.Subscriptions.csproj
+++ b/src/EidolonicBot.Subscriptions/EidolonicBot.Subscriptions.csproj
@@ -15,7 +15,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EidolonicBot.Abstract\EidolonicBot.Abstract.csproj" />
+    <ProjectReference Include="..\EidolonicBot.Constants\EidolonicBot.Constants.csproj" />
     <ProjectReference Include="..\EidolonicBot.Database.Models\EidolonicBot.Database.Models.csproj" />
+    <ProjectReference Include="..\EidolonicBot.Utils\EidolonicBot.Utils.csproj" />
   </ItemGroup>
 
 </Project>
