hide implementations by intrernal

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -6,5 +6,9 @@
         <RootNamespace>EidolonicBot</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="$(AssemblyName).Tests" />
+    </ItemGroup>
+
     <Import Project="Tests.props" Condition="$(MSBuildProjectFile.EndsWith('Tests.csproj'))" />
 </Project>
