--- a/src/EidolonicBot.Wallet/EidolonicBot.Wallet.csproj
+++ b/src/EidolonicBot.Wallet/EidolonicBot.Wallet.csproj
@@ -4,6 +4,7 @@
     <PackageReference Include="EverscaleNet" />
     <PackageReference Include="EverscaleNet.Utils" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.Options" />
   </ItemGroup>
