format short address

--- a/src/EidolonicBot/appsettings.json
+++ b/src/EidolonicBot/appsettings.json
@@ -44,13 +44,16 @@
     "SizeLimit": 10000
   },
   "Blockchain": {
+    "DefaultExplorer": "everscan.io",
     "Explorers:Everscan": {
       "Name": "everscan.io",
-      "TransactionLinkTemplate": "https://everscan.io/transactions/{0}"
+      "TransactionLinkTemplate": "https://everscan.io/transactions/{0}",
+      "AccountLinkTemplate": "https://everscan.io/accounts/{0}"
     },
     "Explorers:Everlive": {
       "Name": "ever.live",
-      "TransactionLinkTemplate": "https://ever.live/transactions/transactionDetails?id={0}"
+      "TransactionLinkTemplate": "https://ever.live/transactions/transactionDetails?id={0}",
+      "AccountLinkTemplate": "https://ever.live/accounts/accountDetails?id={0}"
     }
   }
 }
