--- a/src/EidolonicBot.Subscriptions/EidolonicBot.Subscriptions.csproj
+++ b/src/EidolonicBot.Subscriptions/EidolonicBot.Subscriptions.csproj
@@ -17,7 +17,12 @@
     <ProjectReference Include="..\EidolonicBot.Abstract\EidolonicBot.Abstract.csproj" />
     <ProjectReference Include="..\EidolonicBot.Constants\EidolonicBot.Constants.csproj" />
     <ProjectReference Include="..\EidolonicBot.Database.Models\EidolonicBot.Database.Models.csproj" />
+    <ProjectReference Include="..\EidolonicBot.LinkFormatter\EidolonicBot.LinkFormatter.csproj" />
     <ProjectReference Include="..\EidolonicBot.Utils\EidolonicBot.Utils.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Configurations\" />
   </ItemGroup>
 
 </Project>
