--- a/src/EidolonicBot/appsettings.Development.json
+++ b/src/EidolonicBot/appsettings.Development.json
@@ -8,9 +8,7 @@
   },
   "Serilog": {
     "MinimumLevel": {
-      "Override": {
-        "EverscaleNet": "Verbose"
-      }
+      "Default": "Verbose"
     }
   },
   "Provider": "Sqlite",
