--- a/src/EidolonicBot/appsettings.json
+++ b/src/EidolonicBot/appsettings.json
@@ -7,12 +7,7 @@
   },
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Warning",
-      "Override": {
-        "EidolonicBot": "Debug",
-        "EverscaleNet": "Debug",
-        "Microsoft": "Information"
-      }
+      "Default": "Information"
     },
     "Enrich": [
       "FromLogContext",
