--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -12,6 +12,7 @@
     <PackageVersion Include="MassTransit" Version="8.0.15" />
     <PackageVersion Include="MassTransit.Abstractions" Version="8.0.15" />
     <PackageVersion Include="MassTransit.Analyzers" Version="8.0.15" />
+    <PackageVersion Include="MassTransit.RabbitMQ" Version="8.0.15" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.5" />
@@ -26,6 +27,7 @@
     <PackageVersion Include="Microsoft.NET.Build.Containers" Version="0.4.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
+    <PackageVersion Include="Polly" Version="7.2.3" />
     <PackageVersion Include="Sentry.Extensions.Logging" Version="3.31.0" />
     <PackageVersion Include="Serilog.Enrichers.Environment" Version="2.2.0" />
     <PackageVersion Include="Serilog.Extensions.Hosting" Version="7.0.0" />
