restrict Warning log level to constole and file

--- a/src/EidolonicBot/appsettings.Development.json
+++ b/src/EidolonicBot/appsettings.Development.json
@@ -9,6 +9,16 @@
   "Serilog": {
     "MinimumLevel": {
       "Default": "Verbose"
+    },
+    "WriteTo:Console": {
+      "Args": {
+        "restrictedToMinimumLevel": "Verbose"
+      }
+    },
+    "WriteTo:File": {
+      "Args": {
+        "restrictedToMinimumLevel": "Verbose"
+      }
     }
   },
   "Provider": "Sqlite",
