--- a/src/EidolonicBot/appsettings.json
+++ b/src/EidolonicBot/appsettings.json
@@ -16,7 +16,8 @@
     "WriteTo:Console": {
       "Name": "Console",
       "Args": {
-        "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+        "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}",
+        "restrictedToMinimumLevel": "Warning"
       }
     },
     "WriteTo:File": {
@@ -24,7 +25,8 @@
       "Args": {
         "path": "./logs/log.json",
         "rollingInterval": "Day",
-        "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
+        "restrictedToMinimumLevel": "Warning"
       }
     },
     "WriteTo:Elasticsearch": {
