--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -44,5 +44,6 @@
     <PackageVersion Include="Xunit.DependencyInjection" Version="8.7.1" />
     <PackageVersion Include="Xunit.DependencyInjection.Logging" Version="8.1.0" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.5" />
+    <PackageVersion Include="ZeroQL" Version="3.6.2" />
   </ItemGroup>
 </Project>
