--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -38,6 +38,7 @@
     <PackageVersion Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageVersion Include="Serilog.Sinks.XUnit" Version="3.0.5" />
     <PackageVersion Include="Telegram.Bot" Version="19.0.0" />
+    <PackageVersion Include="Telegram.Bot.Extensions.Markup" Version="1.0.1" />
     <PackageVersion Include="xunit" Version="2.4.2" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.5" />
   </ItemGroup>
