--- a/src/EidolonicBot.Bot/EidolonicBot.Bot.csproj
+++ b/src/EidolonicBot.Bot/EidolonicBot.Bot.csproj
@@ -6,6 +6,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" />
     <PackageReference Include="Microsoft.Extensions.Http" />
     <PackageReference Include="Telegram.Bot" />
+    <PackageReference Include="Telegram.Bot.Extensions.Markup" />
   </ItemGroup>
 
   <ItemGroup>
