--- a/src/EidolonicBot.Utils/EidolonicBot.Utils.csproj
+++ b/src/EidolonicBot.Utils/EidolonicBot.Utils.csproj
@@ -1,3 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
+  <ItemGroup>
+    <PackageReference Include="Telegram.Bot.Extensions.Markup" />
+  </ItemGroup>
 </Project>
