use EverscaleNet.TestSuite for EidolonicBot.Wallet.Tests

--- a/src/EidolonicBot.Wallet.Tests/EidolonicBot.Wallet.Tests.csproj
+++ b/src/EidolonicBot.Wallet.Tests/EidolonicBot.Wallet.Tests.csproj
@@ -3,7 +3,10 @@
   <ItemGroup>
     <PackageReference Include="EverscaleNet.AppKit" />
     <PackageReference Include="EverscaleNet.Client" />
+    <PackageReference Include="EverscaleNet.TestSuite" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" />
+    <PackageReference Include="Xunit.DependencyInjection" />
+    <PackageReference Include="Xunit.DependencyInjection.Logging" />
   </ItemGroup>
 
   <ItemGroup>
