--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -4,10 +4,11 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageVersion Include="coverlet.collector" Version="3.2.0" />
-    <PackageVersion Include="EverscaleNet" Version="1.42.2-alfa3" />
-    <PackageVersion Include="EverscaleNet.AppKit" Version="1.42.2-alfa3" />
-    <PackageVersion Include="EverscaleNet.Client" Version="1.42.2-alfa3" />
-    <PackageVersion Include="EverscaleNet.Utils" Version="1.42.2-alfa3" />
+    <PackageVersion Include="EverscaleNet" Version="1.42.2-alfa9" />
+    <PackageVersion Include="EverscaleNet.AppKit" Version="1.42.2-alfa9" />
+    <PackageVersion Include="EverscaleNet.Client" Version="1.42.2-alfa9" />
+    <PackageVersion Include="EverscaleNet.TestSuite" Version="1.42.2-alfa9" />
+    <PackageVersion Include="EverscaleNet.Utils" Version="1.42.2-alfa9" />
     <PackageVersion Include="FluentAssertions" Version="6.11.0" />
     <PackageVersion Include="MassTransit" Version="8.0.15" />
     <PackageVersion Include="MassTransit.Abstractions" Version="8.0.15" />
@@ -40,6 +41,8 @@
     <PackageVersion Include="Telegram.Bot" Version="19.0.0" />
     <PackageVersion Include="Telegram.Bot.Extensions.Markup" Version="1.0.1" />
     <PackageVersion Include="xunit" Version="2.4.2" />
+    <PackageVersion Include="Xunit.DependencyInjection" Version="8.7.1" />
+    <PackageVersion Include="Xunit.DependencyInjection.Logging" Version="8.1.0" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.5" />
   </ItemGroup>
 </Project>
