--- a/.github/workflows/hosting.yaml
+++ b/.github/workflows/hosting.yaml
@@ -9,7 +9,7 @@ on:
   schedule:
     - cron: '0 */4 * * *'
   workflow_run:
-    workflows: [ Build ]
+    workflows: [ 'CI' ]
     types: [ completed ]
   workflow_dispatch:
 
