--- a/.hosting/docker-compose.yaml
+++ b/.hosting/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   app:
-    image: ghcr.io/everscale-actions/eidolonic-bot:latest
+    image: ghcr.io/everscale-actions/eidolonic-bot:${TAG:-latest}
     env_file: .env
     volumes:
       - ./logs/:/app/logs/
