--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -4,11 +4,11 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageVersion Include="coverlet.collector" Version="3.2.0" />
-    <PackageVersion Include="EverscaleNet" Version="1.42.2-alfa9" />
-    <PackageVersion Include="EverscaleNet.AppKit" Version="1.42.2-alfa9" />
-    <PackageVersion Include="EverscaleNet.Client" Version="1.42.2-alfa9" />
-    <PackageVersion Include="EverscaleNet.TestSuite" Version="1.42.2-alfa9" />
-    <PackageVersion Include="EverscaleNet.Utils" Version="1.42.2-alfa9" />
+    <PackageVersion Include="EverscaleNet" Version="1.42.2-local2" />
+    <PackageVersion Include="EverscaleNet.AppKit" Version="1.42.2-local2" />
+    <PackageVersion Include="EverscaleNet.Client" Version="1.42.2-local2" />
+    <PackageVersion Include="EverscaleNet.TestSuite" Version="1.42.2-local2" />
+    <PackageVersion Include="EverscaleNet.Utils" Version="1.42.2-local2" />
     <PackageVersion Include="FluentAssertions" Version="6.11.0" />
     <PackageVersion Include="MassTransit" Version="8.0.15" />
     <PackageVersion Include="MassTransit.Abstractions" Version="8.0.15" />
