--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -3,17 +3,23 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="coverlet.collector" Version="3.2.0" />
-    <PackageVersion Include="EverscaleNet" Version="1.42.2-local2" />
-    <PackageVersion Include="EverscaleNet.AppKit" Version="1.42.2-local2" />
-    <PackageVersion Include="EverscaleNet.Client" Version="1.42.2-local2" />
-    <PackageVersion Include="EverscaleNet.TestSuite" Version="1.42.2-local2" />
-    <PackageVersion Include="EverscaleNet.Utils" Version="1.42.2-local2" />
+    <PackageVersion Include="coverlet.collector" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageVersion>
+    <PackageVersion Include="EverscaleNet" Version="1.43.0.4-1685085285" />
+    <PackageVersion Include="EverscaleNet.AppKit" Version="1.43.0.4-1685085285" />
+    <PackageVersion Include="EverscaleNet.Client" Version="1.43.0.4-1685085285" />
+    <PackageVersion Include="EverscaleNet.TestSuite" Version="1.43.0.4-1685085285" />
+    <PackageVersion Include="EverscaleNet.Utils" Version="1.43.0.4-1685085285" />
     <PackageVersion Include="FluentAssertions" Version="6.11.0" />
-    <PackageVersion Include="MassTransit" Version="8.0.15" />
-    <PackageVersion Include="MassTransit.Abstractions" Version="8.0.15" />
-    <PackageVersion Include="MassTransit.Analyzers" Version="8.0.15" />
-    <PackageVersion Include="MassTransit.RabbitMQ" Version="8.0.15" />
+    <PackageVersion Include="MassTransit" Version="8.0.16" />
+    <PackageVersion Include="MassTransit.Abstractions" Version="8.0.16" />
+    <PackageVersion Include="MassTransit.Analyzers" Version="8.0.16">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageVersion>
+    <PackageVersion Include="MassTransit.RabbitMQ" Version="8.0.16" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.5" />
@@ -25,13 +31,14 @@
     <PackageVersion Include="Microsoft.Extensions.Http" Version="7.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Options" Version="7.0.1" />
-    <PackageVersion Include="Microsoft.NET.Build.Containers" Version="0.4.0" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+    <PackageVersion Include="Microsoft.NET.Build.Containers" Version="7.0.302" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
     <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
     <PackageVersion Include="Polly" Version="7.2.3" />
-    <PackageVersion Include="Sentry.Extensions.Logging" Version="3.31.0" />
+    <PackageVersion Include="Sentry.Extensions.Logging" Version="3.33.0" />
     <PackageVersion Include="Serilog.Enrichers.Environment" Version="2.2.0" />
     <PackageVersion Include="Serilog.Extensions.Hosting" Version="7.0.0" />
+    <PackageVersion Include="Serilog.Extensions.Logging" Version="7.0.0" />
     <PackageVersion Include="Serilog.Formatting.Compact" Version="1.1.0" />
     <PackageVersion Include="Serilog.Settings.Configuration" Version="7.0.0" />
     <PackageVersion Include="Serilog.Sinks.Console" Version="4.1.0" />
