--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -3,46 +3,58 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="coverlet.collector" Version="3.2.0" />
-    <PackageVersion Include="EverscaleNet" Version="1.42.2-alfa9" />
-    <PackageVersion Include="EverscaleNet.AppKit" Version="1.42.2-alfa9" />
-    <PackageVersion Include="EverscaleNet.Client" Version="1.42.2-alfa9" />
-    <PackageVersion Include="EverscaleNet.TestSuite" Version="1.42.2-alfa9" />
-    <PackageVersion Include="EverscaleNet.Utils" Version="1.42.2-alfa9" />
-    <PackageVersion Include="FluentAssertions" Version="6.11.0" />
-    <PackageVersion Include="MassTransit" Version="8.0.15" />
-    <PackageVersion Include="MassTransit.Abstractions" Version="8.0.15" />
-    <PackageVersion Include="MassTransit.Analyzers" Version="8.0.15" />
-    <PackageVersion Include="MassTransit.RabbitMQ" Version="8.0.15" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.5" />
-    <PackageVersion Include="Microsoft.Extensions.Caching.Abstractions" Version="7.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
-    <PackageVersion Include="Microsoft.Extensions.Http" Version="7.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Options" Version="7.0.1" />
-    <PackageVersion Include="Microsoft.NET.Build.Containers" Version="0.4.0" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
-    <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
-    <PackageVersion Include="Polly" Version="7.2.3" />
-    <PackageVersion Include="Sentry.Extensions.Logging" Version="3.31.0" />
-    <PackageVersion Include="Serilog.Enrichers.Environment" Version="2.2.0" />
-    <PackageVersion Include="Serilog.Extensions.Hosting" Version="7.0.0" />
-    <PackageVersion Include="Serilog.Formatting.Compact" Version="1.1.0" />
-    <PackageVersion Include="Serilog.Settings.Configuration" Version="7.0.0" />
-    <PackageVersion Include="Serilog.Sinks.Console" Version="4.1.0" />
-    <PackageVersion Include="Serilog.Sinks.Elasticsearch" Version="9.0.1" />
-    <PackageVersion Include="Serilog.Sinks.File" Version="5.0.0" />
-    <PackageVersion Include="Serilog.Sinks.XUnit" Version="3.0.5" />
-    <PackageVersion Include="Telegram.Bot" Version="19.0.0" />
-    <PackageVersion Include="Telegram.Bot.Extensions.Markup" Version="1.0.1" />
-    <PackageVersion Include="xunit" Version="2.4.2" />
-    <PackageVersion Include="Xunit.DependencyInjection" Version="8.7.1" />
-    <PackageVersion Include="Xunit.DependencyInjection.Logging" Version="8.1.0" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.5" />
+    <PackageVersion Include="coverlet.collector" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageVersion>
+    <PackageVersion Include="EverscaleNet" Version="1.43.3"/>
+    <PackageVersion Include="EverscaleNet.AppKit" Version="1.43.3"/>
+    <PackageVersion Include="EverscaleNet.Client" Version="1.43.3"/>
+    <PackageVersion Include="EverscaleNet.TestSuite" Version="1.43.3"/>
+    <PackageVersion Include="EverscaleNet.Utils" Version="1.43.3"/>
+    <PackageVersion Include="FluentAssertions" Version="6.11.0"/>
+    <PackageVersion Include="MassTransit" Version="8.0.16"/>
+    <PackageVersion Include="MassTransit.Abstractions" Version="8.0.16"/>
+    <PackageVersion Include="MassTransit.Analyzers" Version="8.0.16">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageVersion>
+    <PackageVersion Include="MassTransit.RabbitMQ" Version="8.0.16"/>
+    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="7.0.9"/>
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageVersion>
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.9"/>
+    <PackageVersion Include="Microsoft.Extensions.Caching.Abstractions" Version="7.0.0"/>
+    <PackageVersion Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0"/>
+    <PackageVersion Include="Microsoft.Extensions.Configuration" Version="7.0.0"/>
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0"/>
+    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="7.0.1"/>
+    <PackageVersion Include="Microsoft.Extensions.Http" Version="7.0.0"/>
+    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1"/>
+    <PackageVersion Include="Microsoft.Extensions.Options" Version="7.0.1"/>
+    <PackageVersion Include="Microsoft.NET.Build.Containers" Version="7.0.306"/>
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.6.3"/>
+    <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4"/>
+    <PackageVersion Include="Polly" Version="7.2.4"/>
+    <PackageVersion Include="Sentry.Extensions.Logging" Version="3.34.0"/>
+    <PackageVersion Include="Serilog.Enrichers.Environment" Version="2.2.0"/>
+    <PackageVersion Include="Serilog.Extensions.Hosting" Version="7.0.0"/>
+    <PackageVersion Include="Serilog.Formatting.Compact" Version="1.1.0"/>
+    <PackageVersion Include="Serilog.Settings.Configuration" Version="7.0.0"/>
+    <PackageVersion Include="Serilog.Sinks.Console" Version="4.1.0"/>
+    <PackageVersion Include="Serilog.Sinks.Elasticsearch" Version="9.0.3"/>
+    <PackageVersion Include="Serilog.Sinks.File" Version="5.0.0"/>
+    <PackageVersion Include="Serilog.Sinks.XUnit" Version="3.0.5"/>
+    <PackageVersion Include="Telegram.Bot" Version="19.0.0"/>
+    <PackageVersion Include="Telegram.Bot.Extensions.Markup" Version="1.0.1"/>
+    <PackageVersion Include="xunit" Version="2.5.0"/>
+    <PackageVersion Include="Xunit.DependencyInjection" Version="8.7.1"/>
+    <PackageVersion Include="Xunit.DependencyInjection.Logging" Version="8.1.0"/>
+    <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageVersion>
   </ItemGroup>
 </Project>
