--- a/.github/workflows/hosting.yaml
+++ b/.github/workflows/hosting.yaml
@@ -35,10 +35,17 @@ jobs:
           AMQP_URI=${{ secrets.AMQP_URI }}
           EOT
 
+      - uses: nrwl/last-successful-commit-action@v1
+        id: last_successful_commit
+        with:
+          branch: 'main'
+          workflow_id: 'ci.yaml'
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Run app
         working-directory: ${{ env.HOSTING_PATH }}
         run: |
-          TAG=${{ github.sha }} docker compose up --pull=always
+          TAG=${{ steps.last_successful_commit.outputs.commit_hash }} docker compose up --pull=always
 
       - name: Logs to artifact
         if: always()
