--- a/.github/workflows/hosting.yaml
+++ b/.github/workflows/hosting.yaml
@@ -18,6 +18,7 @@ env:
 
 jobs:
   run-app:
+    if: ${{ github.event.workflow_run == null || github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
