--- a/.github/workflows/hosting.yaml
+++ b/.github/workflows/hosting.yaml
@@ -9,8 +9,9 @@ on:
   schedule:
     - cron: '0 */4 * * *'
   workflow_run:
-    workflows: [ 'CI' ]
+    workflows: [ CI ]
     types: [ completed ]
+    branches: [ main ]
   workflow_dispatch:
 
 env:
@@ -36,17 +37,17 @@ jobs:
           AMQP_URI=${{ secrets.AMQP_URI }}
           EOT
 
-      - uses: nrwl/last-successful-commit-action@v1
-        id: last_successful_commit
+      - name: Nx set SHAs
+        id: setSHAs
+        uses: nrwl/nx-set-shas@v4.0.1
         with:
-          branch: 'main'
-          workflow_id: 'ci.yaml'
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          workflow-id: ci.yaml
+          set-environment-variables-for-job: false
 
       - name: Run app
         working-directory: ${{ env.HOSTING_PATH }}
         run: |
-          TAG=${{ steps.last_successful_commit.outputs.commit_hash }} docker compose up --pull=always
+          TAG=${{ steps.setSHAs.outputs.base }} docker compose up --pull=always
 
       - name: Logs to artifact
         if: always()
