--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,9 @@ on:
       - .github/workflows/ci.yaml
     branches:
       - main
+  pull_request:
+    paths:
+      - src/**
 
 concurrency:
   group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}'
@@ -15,14 +18,12 @@ concurrency:
 env:
   CONTAINER_IMAGE_REGISTRY: ghcr.io
   CONTAINER_IMAGE_NAME: everscale-actions/eidolonic-bot
+  ARCHITECTURES: x64,arm64
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
       packages: write
-    strategy:
-      matrix:
-        arch: [ x64, arm64 ]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-dotnet@v3
@@ -47,51 +48,10 @@ jobs:
           name: test-results
           path: '**/*.trx'
 
-      - name: Build image
-        working-directory: src
-        env:
-          ContainerImageName: ${{ env.CONTAINER_IMAGE_NAME }}
-          ContainerImageTags: ${{ github.sha }}-${{ matrix.arch }}
-        run: |
-          dotnet publish EidolonicBot --os linux --arch ${{ matrix.arch }} /t:PublishContainer -c Release
-
-      - uses: docker/login-action@v2
+      - name: Publish image
+        if: github.event_name != 'pull_request'
+        uses: ./.github/actions/publish-image.yaml
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
-
-      - name: Tag and push image to ghcr.io
-        env:
-          IMAGE_NAME: ${{ env.CONTAINER_IMAGE_NAME }}
-          IMAGE_TAG: ${{ github.sha }}-${{ matrix.arch }}
-          REGISTRY: ${{ env.CONTAINER_IMAGE_REGISTRY }}
-        run: |
-          docker tag $IMAGE_NAME:$IMAGE_TAG $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
-          docker push $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
-  
-  manifest:
-    needs:
-      - build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
-
-      - name: Publish manifest
-        env:
-          REGISTRY: ${{ env.CONTAINER_IMAGE_REGISTRY }}
-          IMAGE_NAME: ${{ env.CONTAINER_IMAGE_NAME }}
-        run: |
-          docker manifest create $REGISTRY/$IMAGE_NAME:${{ github.sha }} \
-            --amend $REGISTRY/$IMAGE_NAME:${{ github.sha }}-x64 \
-            --amend $REGISTRY/$IMAGE_NAME:${{ github.sha }}-arm64
-          docker manifest push $REGISTRY/$IMAGE_NAME:${{ github.sha }}          
-          
-          docker manifest create $REGISTRY/$IMAGE_NAME:latest \
-            --amend $REGISTRY/$IMAGE_NAME:${{ github.sha }}-x64 \
-            --amend $REGISTRY/$IMAGE_NAME:${{ github.sha }}-arm64
-          docker manifest push $REGISTRY/$IMAGE_NAME:latest
+          registry: ${{ env.CONTAINER_IMAGE_REGISTRY }}
+          image-name: ${{ env.CONTAINER_IMAGE_NAME }}
+          architectures: ${{ env.ARCHITECTURES }}
