--- a/.github/workflows/hosting.yaml
+++ b/.github/workflows/hosting.yaml
@@ -9,8 +9,9 @@ on:
   schedule:
     - cron: '0 */4 * * *'
   workflow_run:
-    workflows: [ 'CI' ]
+    workflows: [ CI ]
     types: [ completed ]
+    branches: [ main ]
   workflow_dispatch:
 
 env:
