--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,12 +27,18 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-dotnet@v3
 
+      - name: Get Cache Month
+        id: cache-month
+        run: |
+          echo "date=$(/bin/date -u "+%Y%m")" >> $GITHUB_OUTPUT
+        shell: bash
+
       - uses: actions/cache@v3
         with:
           path: ~/.nuget/packages
-          key: nuget-${{ hashFiles('src/Directory.Packages.props') }}
+          key: nuget-${{ steps.cache-month.outputs.date }}-${{ hashFiles('src/Directory.Packages.props') }}
           restore-keys: |
-            nuget-
+            nuget-${{ steps.cache-month.outputs.date }}-
 
       - name: Run tests
         timeout-minutes: 10
