--- a/.github/workflows/test-report.yaml
+++ b/.github/workflows/test-report.yaml
@@ -4,6 +4,10 @@ on:
     workflows: [ 'CI' ]
     types:
       - completed
+permissions:
+  contents: read
+  actions: read
+  checks: write
 jobs:
   report:
     runs-on: ubuntu-latest
