chore: use newtonsoft serializer and publish update message to MT

--- a/src/EidolonicBot/EidolonicBot.csproj
+++ b/src/EidolonicBot/EidolonicBot.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="EverscaleNet.Client" />
     <PackageReference Include="MassTransit" />
+    <PackageReference Include="MassTransit.Newtonsoft" />
     <PackageReference Include="MassTransit.RabbitMQ" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
       <PrivateAssets>all</PrivateAssets>
