--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -19,6 +19,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageVersion>
+    <PackageVersion Include="MassTransit.Newtonsoft" Version="8.1.1" />
     <PackageVersion Include="MassTransit.RabbitMQ" Version="8.1.1" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.13">
