--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,6 +28,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '8.0'
 
       - name: Get Cache Month
         id: cache-month
