--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,12 +29,6 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v4
-      - uses: docker/login-action@v2
-        #        if: github.event_name != 'pull_request'
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
       
       - uses: actions/setup-dotnet@v3
         with:
@@ -53,11 +47,16 @@ jobs:
           restore-keys: |
             nuget-net8-${{ steps.cache-month.outputs.date }}-
       
+      - name: Build
+        working-directory: src
+        run: |
+          dotnet build -c Release
+      
       - name: Run tests
         timeout-minutes: 10
         working-directory: src
         run: |
-          dotnet test -c Release --logger "console;verbosity=normal" --logger "trx;LogFilePrefix=results" -m
+          dotnet test --no-build -c Release --logger "console;verbosity=normal" --logger "trx;LogFilePrefix=results" -m
       
       - name: Upload test results trx files
         uses: actions/upload-artifact@v3
@@ -65,6 +64,13 @@ jobs:
         with:
           name: test-results
           path: '**/*.trx'
+      
+      - uses: docker/login-action@v2
+        if: $${{ github.event_name != 'pull_request' || contains(github.event.pull_request.labels.*.name, 'publish') }}
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
       
       - name: Build, publish image and push manifest
         if: $${{ github.event_name != 'pull_request' || contains(github.event.pull_request.labels.*.name, 'publish') }}
