--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,20 @@
 version: 2
 updates:
-  - package-ecosystem: "nuget"
+  - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "weekly"
-    reviewers:
+    open-pull-requests-limit: 1
+    rebase-strategy: "auto"
+    groups:
+      All:
+        patterns:
+          - "*"      
+  - package-ecosystem: "nuget"
+    directory: "/src"
+    schedule:
+      interval: "weekly"
+    assignees:
       - "ch1seL"
     open-pull-requests-limit: 1
     rebase-strategy: "auto"
