--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,8 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    reviewers:
+      - "ch1seL"
     open-pull-requests-limit: 1
     rebase-strategy: "auto"
     groups:
@@ -14,7 +16,7 @@ updates:
     directory: "/src"
     schedule:
       interval: "weekly"
-    assignees:
+    reviewers:
       - "ch1seL"
     open-pull-requests-limit: 1
     rebase-strategy: "auto"
