--- a/.github/workflows/test-report.yaml
+++ b/.github/workflows/test-report.yaml
@@ -12,7 +12,7 @@ jobs:
   report:
     runs-on: ubuntu-latest
     steps:
-      - uses: dorny/test-reporter@v1
+      - uses: phoenix-actions/test-reporting@v15
         id: test-report
         with:
           artifact: test-results
