--- a/src/EidolonicBot/appsettings.json
+++ b/src/EidolonicBot/appsettings.json
@@ -26,11 +26,8 @@
       "Args": {
         "path": "./logs/log.json",
         "rollingInterval": "Day",
-        "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
+        "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
       }
-    },
-    "WriteTo:Elasticsearch": {
-      "Name": "Elasticsearch"
     }
   },
   "Sentry": {
