--- a/src/EidolonicBot.Utils/EidolonicBot.Utils.csproj
+++ b/src/EidolonicBot.Utils/EidolonicBot.Utils.csproj
@@ -2,4 +2,7 @@
     <ItemGroup>
         <PackageReference Include="Telegram.Bot.Extensions.Markup" />
     </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\EidolonicBot.Constants\EidolonicBot.Constants.csproj" />
+    </ItemGroup>
 </Project>
