--- a/src/EidolonicBot/appsettings.Production.json
+++ b/src/EidolonicBot/appsettings.Production.json
@@ -1,12 +1,10 @@
 {
   "Serilog": {
-    "WriteTo:TcpSyslog": {
-      "Name": "TcpSyslog",
+    "WriteTo:NewRelicLogs": {
+      "Name": "NewRelicLogs",
       "Args": {
-        "host": "logsene-syslog-receiver.sematext.com",
-        "port": 514,
-        "appName": "USE TOKEN FROM SEMATEXT",
-        "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        "applicationName": "EidolonicBot",
+        "licenseKey": "USE TOKEN FROM NewRelic"
       }
     }
   }
