--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -44,7 +44,7 @@
     <PackageVersion Include="Serilog.Settings.Configuration" Version="8.0.2" />
     <PackageVersion Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageVersion Include="Serilog.Sinks.File" Version="6.0.0" />
-    <PackageVersion Include="Serilog.Sinks.SyslogMessages" Version="3.0.2" />
+    <PackageVersion Include="Serilog.Sinks.NewRelic.Logs" Version="1.3.0"/>
     <PackageVersion Include="Serilog.Sinks.XUnit" Version="3.0.5" />
     <PackageVersion Include="Telegram.Bot" Version="21.11.0" />
     <PackageVersion Include="xunit" Version="2.9.2" />
