--- a/src/EidolonicBot/EidolonicBot.csproj
+++ b/src/EidolonicBot/EidolonicBot.csproj
@@ -31,7 +31,7 @@
         <PackageReference Include="Serilog.Settings.Configuration" />
         <PackageReference Include="Serilog.Sinks.Console" />
         <PackageReference Include="Serilog.Sinks.File" />
-        <PackageReference Include="Serilog.Sinks.SyslogMessages" />
+        <PackageReference Include="Serilog.Sinks.NewRelic.Logs"/>
     </ItemGroup>
 
     <ItemGroup>
