add link to snipa.finance profile

--- a/src/EidolonicBot/appsettings.json
+++ b/src/EidolonicBot/appsettings.json
@@ -48,6 +48,10 @@
       "Name": "ever.live",
       "TransactionLinkTemplate": "https://ever.live/transactions/transactionDetails?id={0}",
       "AccountLinkTemplate": "https://ever.live/accounts/accountDetails?id={0}"
+    },
+    "Explorers:Snipa": {
+      "Name": "snipa.finance",
+      "AccountLinkTemplate": "https://snipa.finance/profile/{0}"
     }
   }
 }
