--- a/.github/workflows/hosting.yaml
+++ b/.github/workflows/hosting.yaml
@@ -23,7 +23,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
+        with:
+          filter: ${{ env.HOSTING_PATH }}
 
       - name: Create .env file
         working-directory: ${{ env.HOSTING_PATH }}
@@ -55,4 +56,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: logs
-          path: .hosting/logs/**
+          path: ${{ env.HOSTING_PATH }}/logs/**
