--- a/src/NuGet.Config
+++ b/src/NuGet.Config
@@ -15,4 +15,8 @@
             <package pattern="Telegram.Bot*" />
         </packageSource>
     </packageSourceMapping>
+    <auditSources>
+        <clear />
+        <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    </auditSources>
 </configuration>
