--- a/src/EidolonicBot/EidolonicBot.csproj
+++ b/src/EidolonicBot/EidolonicBot.csproj
@@ -7,7 +7,7 @@
     <PropertyGroup>
         <ContainerRepository>everscale-actions/eidolonic-bot</ContainerRepository>
         <ContainerImageTags Condition="$(ContainerImageTags) == ''">latest</ContainerImageTags>
-        <ContainerFamily>jammy-chiseled-extra</ContainerFamily>
+        <ContainerFamily>noble-chiseled-extra</ContainerFamily>
     </PropertyGroup>
 
     <ItemGroup>
