EFCore group in dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,7 +21,11 @@ updates:
     groups:
       EverscaleNet:
         patterns:
-          - "EverscaleNet.*"
+          - "Microsoft.EntityFrameworkCore*"
+          - "Npgsql.EntityFrameworkCore*"
+      EFCore:
+        patterns:
+          - "*"
       All:
         patterns:
           - "*"
