EFCore group in dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,11 +21,11 @@ updates:
     groups:
       EverscaleNet:
         patterns:
-          - "Microsoft.EntityFrameworkCore*"
-          - "Npgsql.EntityFrameworkCore*"
+          - "EverscaleNet.*"
       EFCore:
         patterns:
-          - "*"
+          - "Microsoft.EntityFrameworkCore*"
+          - "Npgsql.EntityFrameworkCore*"
       All:
         patterns:
           - "*"
